--- a/css/style.css
+++ b/css/style.css
@@ -211,4 +211,11 @@ button:hover {
 
 /*********************************** footer styless part ******************************************/
 
+.default-site-footer {
+    width: 100%;
+    height: 100vh;
+}
+
+
+
 /**************************************************************************************************/
