--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,6 @@
     font-family: 'Roboto';
 }
 
-button:hover {
-    cursor: pointer;
-}
-
 :root {
     /**** default site colors ****/
     --clr-blue: #274C5B;
@@ -30,6 +26,19 @@ button:hover {
     --ff-open-sans: 'Open Sans', sans-serif;
     --ff-italic: 'Yellowtail';
     /***************************************/
+}
+
+/*********** global hover effect section *************/
+.nav-cart-box:hover,
+button:hover {
+    cursor: pointer;
+    box-shadow: -5px 3px 10px #e0dddd;
+}
+
+header a:hover,
+footer a:hover {
+    cursor: pointer;
+    text-shadow: -1px 1px 5px #91dbefb5;
 }
 
 /*********************************** header styless part ******************************************/
@@ -135,24 +144,28 @@ button:hover {
 }
 
 .search-input {
-    /* width: min(19.5vw, 37.5vh);
-    height: min(6.5vh, 3.45vw); */
-    width: 19.5vw;
-    height: 3.45vw;
+    width: min(19.5vw, 37.5vh);
+    height: min(6.5vh, 3.45vw);
+    /* width: 19.5vw;
+    height: 3.45vw; */
     background-color: var(--clr-search-background);
     border-radius: 5000px;
 }
 
+.search-input:hover {
+    box-shadow: -2px 1px 10px #eae7e7ce;
+}
+
 .search-button {
     position: absolute;
-    /* right: min(.3vw, .5vh);
-    bottom: min(.4vh, .25vw); */
-    right: .3vw;
-    bottom: .25vw;
-    /* width: min(2.93vw, 5.62vh);
-    height: min(2.93vw, 5.62vh); */
-    width: 2.93vw;
-    height: 2.93vw;
+    right: min(.3vw, .5vh);
+    bottom: min(.4vh, .25vw);
+    /* right: .3vw;
+    bottom: .25vw; */
+    width: min(2.93vw, 5.62vh);
+    height: min(2.93vw, 5.62vh);
+    /* width: 2.93vw;
+    height: 2.93vw; */
     border-radius: 50%;
     background-color: var(--clr-green);
 }
@@ -326,6 +339,11 @@ button:hover {
     gap: 15px;
 }
 
+.footer-social-icon:hover {
+    cursor: pointer;
+    box-shadow: -3px 2px 10px #e0dddd;
+}
+
 .footer-social-icon {
     padding: 20px;
     font-size: min(2vh, 1.1vw);
@@ -371,6 +389,16 @@ button:hover {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+
+.footer-form-input:hover,
+.footer-form-button:hover {
+    box-shadow: -1px 3px 10px #007bfe;
+    text-shadow: -1px 1px 1px #afaaaa;
+}
+
+.footer-form-container:hover {
+    box-shadow: -1px 2px 10px #afaaaa;
 }
 
 .footer-form {
