--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ footer a:hover {
 .nav-box-1, .text-nav-box,
 .nav-box-2, .nav-search-box,
 .nav-cart-box, .site-logo-box,
+.select-box,
 .default-site-nav {
     display: flex;
     justify-content: center;
@@ -94,9 +95,6 @@ footer a:hover {
 }
 
 .select-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     gap: .4vw;
 }
 
