--- a/css/style.css
+++ b/css/style.css
@@ -55,18 +55,19 @@ header a:hover,
 footer a:hover {
     cursor: pointer;
     color: #b7f3cd;
-    text-shadow: 0px 2px 2px black, 0 0 10px var(--clr-black), 0 0 5px var(--clr-gray);
+    text-shadow: 0px 1px 1px black, 0 0 10px var(--clr-black), 0 0 5px var(--clr-blue);
     /* text-shadow: -1px 1px 5px #91dbefb5; */
 }
 
 .site-logo-box:hover .site-name {
     cursor: pointer;
     color: #88f5b0;
-    text-shadow: 0px 1px 2px black, 0 0 10px var(--clr-black), 0 0 5px var(--clr-green);
+    text-shadow: 0px 1px 1px black, 0 0 10px var(--clr-black), 0 0 5px var(--clr-green);
 }
 
 .site-logo-box:hover .site-logo {
-    filter: brightness(0) invert(1) drop-shadow(0px 0px 2px black) drop-shadow(0 0 10px var(--clr-black)) drop-shadow(0 0 2px var(--clr-green));
+    /* filter: brightness(0) invert(1) drop-shadow(0px 0px 2px black) drop-shadow(0 0 10px var(--clr-black)) drop-shadow(0 0 2px var(--clr-green)); */
+    filter: invert(25%) sepia(52%) saturate(416%) hue-rotate(151deg) brightness(50%) contrast(94%) drop-shadow(-2px 2px 10px var(--clr-green));
 }
 
 /*********************************** header styless part ******************************************/
