--- a/css/style.css
+++ b/css/style.css
@@ -56,21 +56,19 @@ header label:hover + #pages,
 header .select-box:hover label,
 header a:hover,
 footer a:hover {
+    text-shadow: -.5px .5px .5px black;
     cursor: pointer;
-    color: var(--clr-yellow);
-    text-shadow: /*-1px 2px 1px black, 0 0 1px var(--clr-black),*/ -1px 1px 1px var(--clr-blue);
-    /* text-shadow: -1px 1px 5px #91dbefb5; */
+    color: green;
 }
 
 .site-logo-box:hover .site-name {
     cursor: pointer;
-    color: #0c612bb9;
-    text-shadow:-1px 1px 5px var(--clr-blue);
+    color: #038432b9;
 }
 
 .site-logo-box:hover .site-logo {
     /* filter: brightness(0) invert(1) drop-shadow(0px 0px 2px black) drop-shadow(0 0 10px var(--clr-black)) drop-shadow(0 0 2px var(--clr-green)); */
-    filter: invert(25%) sepia(52%) saturate(416%) hue-rotate(151deg) brightness(50%) contrast(94%) drop-shadow(-2px 2px 10px var(--clr-green));
+    filter: invert(25%) sepia(52%) saturate(416%) hue-rotate(151deg) brightness(50%) contrast(94%); /*drop-shadow(-2px 2px 10px var(--clr-green)) ;*/
 }
 
 /*********************************** header styless part ******************************************/
@@ -294,6 +292,10 @@ footer a:hover {
     gap: 2vh;
 }
 
+#small-logo-box {
+    width: 11vw;
+}
+
 .footer-copyright-box {
     width: 100%;
     height: min(5vh,3.2vw);
@@ -311,6 +313,7 @@ footer a:hover {
 .text-align-center {
     width: 26vw;
     text-align: center;
+    align-items: center;
 }
 
 .text-align-start {
@@ -334,6 +337,7 @@ footer a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    transition: 250ms ease all;
 }
 
 .footer-vertical-hr {
