--- a/css/about_us_style.css
+++ b/css/about_us_style.css
@@ -245,10 +245,11 @@ footer a:hover {
 
 /************************ container styless ***********************/
 
+/* baner style start */
+
 .header-container {
     width: 100%;
-    height: calc(100vh - min(10.5vw, 20vh));
-    background-color: var(--clr-white-green);
+    background-color: #fff;
 }
 .head-baner {
     height: max-content;
@@ -274,6 +275,111 @@ footer a:hover {
     line-height: normal;
     text-transform: capitalize;
 }
+
+/* baner style end */
+
+
+/* plate section style start */
+
+.plate-box {
+    padding-top: 4%;
+    display: flex;
+    margin: 0 auto;
+    width: 71%;
+
+}
+
+
+.plate-img {
+    width: 50%;
+    height: 100%;
+    /* left: -30%; */
+    position: relative;
+}
+.plate-img>img {
+    left: -50%;
+    position: relative;
+    width: 150%;
+    height: auto;
+}
+
+.plate-txt {
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    height: 100%;
+    width: 50%;
+}
+
+.plate-txt>h3 {
+    color: var(--clr-green);
+    font-family: Yellowtail;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.big-p {
+    color: var(--clr-blue);
+    font-family: Roboto;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.small-p {
+    margin-top: 2%;
+    color: #525C60;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 165.4%; /* 29.772px */
+}
+
+.icon-section {
+    margin-top: 5%;
+    display: flex;
+}
+.tractor-part {
+    gap: 2%;
+    display: flex;
+}
+
+.tractor-part>span{
+    color: #274C5B;
+    font-family: Roboto;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    width: 80%;
+}
+
+.chemic-part {
+    display: flex;
+    gap: 2%;
+}
+
+.chemic-part>span {
+    margin-left: auto;
+    color: #274C5B;
+    font-family: Roboto;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    width: 80%;
+}
+
+.plate-txt>button{
+    margin-top: 10%;
+}
+
+
+
 /**************************************************************************************************/
 
 /*********************************** footer styless part ******************************************/
