--- a/css/about_us_style.css
+++ b/css/about_us_style.css
@@ -284,8 +284,7 @@ footer a:hover {
 .plate-box {
     padding-top: 4%;
     display: flex;
-    margin: 0 auto;
-    width: 71%;
+    width: 100%;
 
 }
 
@@ -376,10 +375,24 @@ footer a:hover {
 
 .plate-txt>button{
     margin-top: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
 }
 
 
+/* end of plate section */
 
+
+
+
+/* start of green vegetables */
+
+.my-container {
+    width: 70%;
+    margin: 0 auto;
+}
 /**************************************************************************************************/
 
 /*********************************** footer styless part ******************************************/
@@ -388,7 +401,8 @@ footer a:hover {
 }
 
 .footer-container {
-    width: 100%;
+    margin: 0 auto;
+    width: 70%;
     height: 70vh;
     gap: 10vh;
 }
