--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,7 @@
 	border: 0;
 	box-sizing: border-box;
 }
-/*Стили для демонстрации*/
-html,body{
-	height: 100%;
-	background-color: #333;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	color: #fff;
-	font-size: 25px;
-}
+
 .wrapper{
 	height: 100%;
 	padding: 50px;
@@ -107,7 +100,6 @@ html,body{
 	padding: 5px 10px;
 }
 
-
 .arrow {
 	display: none;
 	position: absolute;
@@ -130,8 +122,8 @@ html,body{
 	border-top: 10px solid transparent;
 	border-bottom: 10px solid transparent;
 }
-
-.menu__arrow {}
+/* 
+.menu__arrow {} */
 
 body.mouse .menu__list>li:hover .sub-menu__list {
 	display: block;
@@ -599,6 +591,7 @@ footer a:hover {
     background-color: rgb(241, 241, 241);
     box-shadow: -1px 3px 10px #fff;
     font-style: normal;
+    outline: 1px solid var(--clr-blue);
 }
 
 .footer-form-container:hover {
