--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,16 @@ footer a:hover {
     font-size: 20px;
     line-height: 23px;
     font-weight: 700;
+    text-align: center;
+    position: relative;
+}
+
+.header-container .text .arrow {
+    width: 19px;
+    height: 19px;
+    position: absolute;
+    top: 30px;
+    right: 25px;
 }
 
 .header-container .text h1 {
