--- a/css/about_us_style.css
+++ b/css/about_us_style.css
@@ -394,18 +394,21 @@ main h3 {
 
 /* start of green vegetables */
 .veg-background{
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 200vh;
+    height: auto;
     background-color: var(--clr-white-gray);
 }
 .veg-background>.my-container {
-    background-color: red;
-    height: 100vh;
+    /* padding-top: 25vh; */
+    height: auto;
 }
 .decide {
     width: 100%;
     display: flex;
-    height: 100%;
+    min-height: 50vh;
+
 }
 
 .decide-text {
@@ -413,22 +416,28 @@ main h3 {
     flex-direction: column;
     align-items: start;
     width: 50%;
-    background-color: lightblue;
+    height: 100%;
+
 }
 .decide-img {
+    margin: auto 0;
     width: 50%;
-    background-color: lightseagreen;
-}
 
+}
+.decide-container-small {
+    max-width: 75%;
+
+}
 
 .decide-span {
     margin-top: 5%;
     gap: 3%;
     display: flex;
     align-items: center;
-    padding: 5% 20% 5% 5%;
+    padding: 5% 10% 5% 5%;
     background-color: #ECECEC;;
     border-radius: 50px;
+    width: 70%;
 
 }
 .decide-span>span{
@@ -444,8 +453,18 @@ main h3 {
 
 /* .decide .small-p:nth-child(2), */
 .p-last-child {
-    margin-left: 10%;
+    margin-left: 14%;
 }
+
+.decide-img>img {
+    border-radius: 5%;
+    margin-left: 5%;
+    width: 95%;
+    height: auto;
+}
+
+
+
 
 /**************************************************************************************************/
 
