--- a/css/style.css
+++ b/css/style.css
@@ -28,152 +28,6 @@
     /***************************************/
 }
 
-/****************************************************** styles for select animations ******************************************************/
-/*Обнуление*/
-*,*:before,*:after{
-	padding: 0;
-	margin: 0;
-	border: 0;
-	box-sizing: border-box;
-}
-
-.wrapper{
-	height: 100%;
-	padding: 50px;
-}
-/* Основные стили */
-/* .menu {} */
-.menu a{
-	text-decoration: none;
-}
-.menu a.parent{
-	margin: 0px 30px 0px 0px;
-}
-
-.menu li{
-	position: relative;
-	list-style: none;
-}
-.menu__list {
-	display: flex;
-}
-.menu__list>li{
-	margin: 0px 30px 0px 0px;
-}
-
-.menu__link {
-	color: #fff;
-}
-
-.sub-menu__list {
-	display: none;
-	min-width: 300px;
-	position: absolute;
-	left: 0;
-	top: 20px;
-	padding: 20px 0px 0px 0px;
-}
-.sub-menu__list>li{
-	background-color: #fff;
-}
-
-.sub-menu__link {
-	color: #000;
-	display: inline-block;
-	padding: 5px 10px;
-}
-.sub-sub-menu__list {
-	display: none;
-	position: absolute;
-	top: 0;
-	left: 100%;
-	min-width: 300px;
-	padding: 0px 0px 0px 5px;
-}
-.sub-sub-menu__list>li{
-	background-color: #000;
-}
-.sub-sub-menu__link {
-	color: #fff;
-	display: inline-block;
-	padding: 5px 10px;
-}
-
-.arrow {
-	display: none;
-	position: absolute;
-	right: 0;
-	top: 12px;
-	width: 0;
-	height: 0;
-	border-top: 10px solid #fff;
-	border-right: 10px solid transparent;
-	border-left: 10px solid transparent;
-}
-.arrow.active{
-	transform: rotate(-180deg);
-}
-
-.sub-menu__arrow.arrow {
-	right: 10px;
-	border-left: 10px solid #000;
-	border-right: none;
-	border-top: 10px solid transparent;
-	border-bottom: 10px solid transparent;
-}
-/* 
-.menu__arrow {} */
-
-body.mouse .menu__list>li:hover .sub-menu__list {
-	display: block;
-}
-body.mouse .sub-menu__list>li:hover .sub-sub-menu__list {
-	display: block;
-}
-
-body.touch .sub-menu__list.open{
-	display: block;
-}
-body.touch .sub-sub-menu__list.open{
-	display: block;
-}
-body.touch .arrow {
-	display: block;
-}
-
-@media (max-width:767px){
-	.wrapper{
-		padding: 15px;
-	}
-	.menu__list {
-		display: block;
-	}
-	.menu__list>li{
-		margin: 0px 0px 10px 0px;
-	}
-	.sub-menu__list{
-		position: relative;
-		left: 0;
-		top: 0;
-	}
-	.sub-sub-menu__list{
-		padding: 0px 5px;
-		position: relative;
-		left: 0;
-		top: 0;
-	}
-	.sub-menu__arrow.arrow {
-		right: 10px;
-		top: 15px;
-		border-bottom: none;
-		border-left: 10px solid transparent;
-		border-top: 10px solid #000;
-		border-right: 10px solid transparent;
-	}
-}
-
-/******************************************************************************************************************************************/
-
 /****************************** default hover effect for buttons ********************************/
 
 .nav-cart-box,
@@ -191,15 +45,10 @@ button:hover {
 
 /*********** global hover effect section *************/
 header a,
-header label,
-header label + select,
 footer a {
     transition: 250ms ease all;
 }
 
-header label:hover,
-header label:hover + #pages,
-header .select-box:hover label,
 header a:hover,
 footer a:hover {
     cursor: pointer;
@@ -619,3 +468,165 @@ footer a:hover {
 }
 
 /**************************************************************************************************/
+
+
+
+/****************************************************** styles for select animations ******************************************************/
+/*Обнуление*/
+*,*:before,*:after{
+	padding: 0;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
+}
+
+/* Основные стили */
+/* .menu {} */
+
+/* .menu .select-box.parent{
+	margin: 0px 30px 0px 0px;
+} */
+
+.select-box {
+    position: relative;
+}
+
+.menu__list {
+	display: flex;
+}
+
+.sub-menu__list {
+	display: none;
+	position: absolute;
+    left: -15px;
+	top: 20px;
+	padding: 15px 0px 0px 0px;
+}
+
+.select-box-menu-list-item {
+    width: 90px;
+    margin-top: 2px;
+    color: var(--clr-blue);
+    font-family: 'Roboto';
+    font-size: max(.5rem, 1vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border-radius: 5000px;
+    background-color: #f0efef;
+    transition: 300ms ease all;
+}
+
+.sub-menu__list:hover .select-box-menu-list-item:hover {
+    margin-top: 10px;
+}
+
+.sub-menu__list:hover .select-box-menu-list-item {
+    margin-top: 5px;
+}
+
+.select-box-menu-list-item:hover {
+    box-shadow: -1px 1px 2px var(--clr-blue);
+    margin-bottom: 5px;
+}
+
+/* .sub-menu__link {
+	color: #000;
+	display: inline-block;
+	padding: 5px 10px;
+}
+.sub-sub-menu__list {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 100%;
+	min-width: 300px;
+	padding: 0px 0px 0px 5px;
+}
+.sub-sub-menu__list>button{
+	background-color: #000;
+}
+.sub-sub-menu__link {
+	color: #fff;
+	display: inline-block;
+	padding: 5px 10px;
+} */
+
+.arrow {
+	display: none;
+	position: absolute;
+	right: 0;
+	top: 12px;
+	width: 0;
+	height: 0;
+	border-top: 10px solid #fff;
+	border-right: 10px solid transparent;
+	border-left: 10px solid transparent;
+}
+.arrow.active{
+	transform: rotate(-180deg);
+}
+
+.sub-menu__arrow.arrow {
+	right: 10px;
+	border-left: 10px solid #000;
+	border-right: none;
+	border-top: 10px solid transparent;
+	border-bottom: 10px solid transparent;
+}
+
+/* .menu__arrow {} */
+
+body.mouse .menu__list>.select-box:hover .sub-menu__list {
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+/* body.mouse .sub-menu__list>.select-box:hover .sub-sub-menu__list {
+	display: block;
+} */
+
+/* body.touch .sub-menu__list.open{
+	display: block;
+}
+body.touch .sub-sub-menu__list.open{
+	display: block;
+}
+body.touch .arrow {
+	display: block;
+} */
+
+/* @media (max-width:767px){
+	.wrapper{
+		padding: 15px;
+	}
+	.menu__list {
+		display: block;
+	}
+	.menu__list>.select-box{
+		margin: 0px 0px 10px 0px;
+	}
+	.sub-menu__list{
+		position: relative;
+		left: 0;
+		top: 0;
+	}
+	.sub-sub-menu__list{
+		padding: 0px 5px;
+		position: relative;
+		left: 0;
+		top: 0;
+	}
+	.sub-menu__arrow.arrow {
+		right: 10px;
+		top: 15px;
+		border-bottom: none;
+		border-left: 10px solid transparent;
+		border-top: 10px solid #000;
+		border-right: 10px solid transparent;
+	}
+} */
+
+/******************************************************************************************************************************************/
