--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,7 @@ footer a:hover {
 /************************ container styless ***********************/
 
 .header-body {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -251,6 +252,7 @@ footer a:hover {
 .header-container {
     width: 70%;
     height: calc(100vh - min(10.5vw, 20vh));
+    background-color: var(--clr-white-gray);
 }
 
 /**************************************************************************************************/
