--- a/css/style.css
+++ b/css/style.css
@@ -320,11 +320,61 @@ footer a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 3vh;
 }
 
-.page-1-body > img {
-    width: 48.6%;
+.page-1-box-2,
+.page-1-box-1 {
+    position: relative;
+    width: 100%;
+    height: 30vh;
+    padding-left: 3vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 1vh;
     border-radius: min(1.6vw, 3vh);
+}
+
+.page-1-italic {
+    font-family: 'Yellowtail';
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.page-1-p{
+    font-family: 'Roboto';
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.white {
+    color: #FFF;
+}
+
+.green {
+    color: var(--clr-green);
+}
+
+.blue {
+    color: var(--clr-blue);
+}
+
+.page-1-box-1 {
+    background-image: url('../img/main/page-1-1.svg');
+}
+
+.page-1-box-2 {
+    background-image: url('../img/main/page-1-2.svg');
+}
+
+.page-1-inner {
+    
 }
 
 /********************* page-2 styless section ***********************/
