--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,7 @@ footer a:hover {
 
 /********************* styless for all pages without headeer and footer ***************************/
 
+/************* Organick *************/
 /********************* page-1 styless section ***********************/
 
 .page-1 {
@@ -345,7 +346,7 @@ footer a:hover {
     line-height: normal;
 }
 
-.page-1-p{
+.page-1-p {
     font-family: 'Roboto';
     font-size: 40px;
     font-style: normal;
@@ -373,26 +374,110 @@ footer a:hover {
     background-image: url('../img/main/page-1-2.svg');
 }
 
-.page-1-inner {
-    
-}
-
 /********************* page-2 styless section ***********************/
 
 .page-2 {
     width: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     fill: #F9F8F8;
     background-color: #F9F8F8;
 }
 
 .page-2-body {
-    width: 70%;
+    width: 85%;
+    margin-left: 5.5%;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: space-between;
+}
+
+.page-2-inner {
+    display: flex;
+}
+
+.page-2-box-2,
+.page-2-box-1 {
+    height: 72vh;
+    width: 47%;
+}
+
+.page-2-box-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 1vh;
+}
+
+.page-2-box:last-child {
+    margin-top: 10vh;
+}
+
+.page-2-icon-box {
+    margin-right: 2vh;
+}
+
+.page-2-inner {
+    margin: .7vh 0;
+}
+
+.page-2-p {
+    margin-bottom: 2vh;
+}
+
+.page-2-italic-green {
+    margin-top: 9.5vh;
+    color: #7EB693;
+    font-family: 'Yellowtail';
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.page-2-h1-small,
+.page-2-h1-blue {
+    color: #274C5B;
+    font-family: 'Roboto';
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.page-2-h1-small {
+    font-size: 25px;
+    font-weight: 800;
+}
+
+.page-2-p {
+    color: #525C60;
+    font-family: 'Open Sans';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 165.4%; /* 29.772px */
+}
+
+.page-2-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5vw;
+    margin-top: 1vh;
+    width: 11.5vw;
+    height: 7.5vh;
+    background-color: var(--clr-blue);
+    border-radius: min(1.5vh, .8vw);
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 
 /********************* page-3 styless section ***********************/
