--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,71 @@ footer a:hover {
 
 /********************* page-3 styless section ***********************/
 
+.page-3 {
+    width: 100%;
+    height: 140vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-3-body {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-3-italic-green {
+    color: #7EB693;
+    font-family: 'Yellowtail';
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.page-3-h1-blue {
+    color: #274C5B;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.page-3-product-type {
+    background-color: var(--clr-blue);
+    color: #FFF;
+    text-align: center;
+    font-family: 'Open Sans';
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.page-3-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.page-3-box {
+    position: relative;
+}
+
+.page-3-product-text-box,
+.page-3-product-type {
+    position: absolute;
+}
+
+.page-3-learn-more {
+    background-color: var(--clr-blue);
+    border-radius: 1vh;
+}
+
 /********************* page-4 styless section ***********************/
 
 /********************* page-5 styless section ***********************/
